--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <script src="https://code.angularjs.org/1.4.8/angular-route.min.js" type="text/javascript"></script>
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js" type="text/javascript"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC44BOXdbHi-OLwO18ZFCQgFsr_uFvS6DU&callback=initMap">
+    </script>
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
