--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="loopApp">
   <head>
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-    <link href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
   </head>
@@ -11,9 +11,14 @@
       <canvas id="loader-canvas"></canvas>
         <img src="img/logo.png" />
     </div>
+    <div id="navbar">
+      <a href="#/" alt="Home"><img src="img/logo.png" /></a>
+    </div>
+    <div id="spacer"></div>
     <div ng-view></div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" type="text/javascript"></script>
     <script src="https://code.angularjs.org/1.4.8/angular-route.min.js" type="text/javascript"></script>
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js" type="text/javascript"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
