--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <div ng-view></div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-chart.js/0.8.6/angular-chart.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" type="text/javascript"></script>
     <script src="https://code.angularjs.org/1.4.8/angular-route.min.js" type="text/javascript"></script>
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js" type="text/javascript"></script>
