--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="loader">
       <canvas id="loader-canvas"></canvas>
-        <img src="img/logo.png" />
+        <img src="img/logo.png" class="rotating"/>
     </div>
     <div id="navbar">
       <a href="#/" alt="Home"><img src="img/logo.png" /></a>
