--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/emojione/1.5.2/assets/css/emojione.min.css" />
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
@@ -24,6 +25,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" type="text/javascript"></script>
     <script src="https://code.angularjs.org/1.4.8/angular-route.min.js" type="text/javascript"></script>
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js" type="text/javascript"></script>
+    <script src="//cdn.jsdelivr.net/emojione/1.5.2/lib/js/emojione.min.js" type="text/javascript"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
     <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC44BOXdbHi-OLwO18ZFCQgFsr_uFvS6DU&callback=initMap">
