--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="img/logo.png" class="rotating"/>
     </div>
     <div id="navbar">
-      <a href="#/" alt="Home"><img src="img/logo.png" /></a>
+      <a href="#/" alt="Home"><img src="img/logoinverse.png" /></a>
     </div>
     <div id="spacer"></div>
     <div ng-view></div>
