--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     </div>
     <div id="spacer"></div>
     <div ng-view></div>
+    <br/></br>
+    <div id="footer">
+      <img src="img/logo.png" /><br/>
+      <p>In the Loop 2015 | Made with Love @ HackWestern</p>
+      <p>Jeffrey Xiao, Katherine Lu, Kevin Pei, and Lillian Zhang</p><br/>
+    </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js" type="text/javascript"></script>
