--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/emojione/1.5.2/assets/css/emojione.min.css" />
     <link rel="stylesheet" href="app.css" />
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
   </head>
   <body>
     <div id="loader">
